deploy/k8s/base/billing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-svc
  namespace: veritas
  labels:
    app: billing-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: billing-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-svc
  namespace: veritas
  labels:
    app: billing-svc
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: billing-svc
  template:
    metadata:
      labels:
        app: billing-svc
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: billing-svc
          image: localhost:31500/billing-svc@sha256:7070156a283c095bdef20dd2342a17586eec7eb8ec66f2d70164abaeda02f57f
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
